<resources>
    <string name="app_name">Athena</string>
    <string name="login_header">Login.</string>
    <string name="login_btn">Login</string>
    <string name="register_header">Register.</string>
    <string name="register_btn">Register Now</string>
    <string name="email">Email</string>
    <string name="password">8 digit Password</string>
    <string name="click_to_login">I want to Login</string>
    <string name="click_to_register">I want to Register</string>
    <string name="logout">Logout</string>
    <string name="athena_banner">athena</string>
</resources>