<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login">

<!--    android:text="@string/login_header"-->

    <TextView
        android:textColor="@color/grey"
        android:text="@string/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/futura"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="10dp"
            android:id="@+id/email"
            android:hint= "@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/futura"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="10dp"
            android:id="@+id/password"
            android:hint= "@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/futura"/>
        <Button
            android:id="@+id/peekPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:text="Show"
            android:textColor="@color/greyDark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/login_btn"
        android:fontFamily="@font/futura"/>

    <TextView
        android:textColor="#999990"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:id="@+id/RegisterNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/violet"/>



</LinearLayout>